Remove comments and improve habitTest readability